--- a/clone-twitter/src/app/components/tweet/tweet.component.html
+++ b/clone-twitter/src/app/components/tweet/tweet.component.html
@@ -1,1 +1,11 @@
-<p>tweet works!</p>
+<div class="w-[650px] bg-white 
+            rounded-lg shadow p-6 mb-8">
+    <div class="flex 
+                justify
+                w-full">
+        <app-avatar />
+        <div>
+            <p>{{TweetMessage}}</p>
+        </div>
+    </div>
+</div>
